<resources>
    <string name="app_name">Event-ify</string>
    <string name="title_activity_maps">Map</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">Logo</string>
    <string name="fab">fab</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="address">Address</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="starts_at">Starts at</string>
    <string name="ends_at">Ends at</string>
    <string name="submit">Submit</string>
    <string name="some_event">Some Event Title</string>
    <string name="participants">Participants</string>

    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>

    <string name="user_name">User name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign up</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="join">Join</string>
    <string name="my_chats">My Chats</string>
    <string name="search">Search</string>
    <string name="image_message">image message</string>
    <string name="sign_out">Sign out</string>
    <string name="contact">Contact</string>
    <string name="send_message">Send Message</string>
    <string name="events_joined">Events joined</string>

    <string name="app_id">ca-app-pub-3494291433648583~3403703940</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>

</resources>