<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEventActivity">


    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@color/greenishBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo" />

    <TextView
        android:id="@+id/tv_add_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_picture"
        android:textColor="@color/greenishBlue"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_add_photo"
        app:layout_constraintEnd_toStartOf="@id/iv_add_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_add_photo" />

    <ImageView
        android:id="@+id/iv_add_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_add_a_photo_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/greenishBlue" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:hint="@string/address"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:hint="@string/title"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_address" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="start|top"
        android:hint="@string/description"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <LinearLayout
        android:id="@+id/layout_Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description">

        <EditText
            android:id="@+id/et_date"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:hint="@string/date"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_starts_at"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:hint="@string/starts_at"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_ends_at"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:hint="@string/ends_at"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/darkgreen"
        android:text="@string/submit"
        android:onClick="submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_Date" />

</androidx.constraintlayout.widget.ConstraintLayout>